--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry==1.1.5 
     - name: Install dependencies for project
-      run: python -m poetry install
+      run: poetry install --quiet
     - name: Lint with flake8
-      run: poetry run flake8
+      run: poetry run flake8 -q
+    - name: Run pytest for tests in project
+      run: poetry run pytest
     
