--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
+pytest = "6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
