--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pytest = "^7.0.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
-pytest = "6.2.5"
+pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 
 [build-system]
