--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "^7.0.1"
+autopep8 = "^1.6.0"
+codecov = "^2.1.12"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
